[package]
name = "casim"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bytemuck = { version = "1.14.0", features = [ "derive" ] }
env_logger = "0.11.1"
log = "0.4.20"
pollster = "0.3.0"
wgpu = "0.19.1"
winit = { version = "0.29.9", features = [ "rwh_05" ] }
